[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
ir = { path = "../ir" }
ast = { path = "../ast" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
regex = "1.12.2"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
ron = "0.12.0"
